syntax = "proto3";
package content;

import "hopeio/utils/patch/go.proto";
import "hopeio/time/timestamp/timestamp.proto";
import "hopeio/time/deletedAt/deletedAt.proto";
import "hopeio/model/basic.proto";
import "protoc-gen-openapiv2/options/annotations.proto";
import "user/user.model.proto";
import "common/common.model.proto";
import "content/action.model.proto";
import "content/content.model.proto";

option java_package = "xyz.hoper.protobuf.content";
option java_multiple_files = true;
option go_package = "github.com/liov/hoper/server/go/protobuf/content";


message Diary {
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  string content = 2 [(go.field) = {tags:'gorm:"type:text;not null" comment:"内容"'}];
  uint64 bookId = 4 [(go.field) = {tags:'gorm:"size:20;default:0" comment:"日记本Id"'}];
  DiaryBook book = 26 [(go.field) = {tags:'gorm:"-" comment:"日记本"'}];
  common.TinyTag mood = 5 [(go.field) = {tags:'gorm:"-" comment:"心情"'}];
  common.TinyTag weather = 7 [(go.field) = {tags:'gorm:"-" comment:"天气"'}];
  common.Area area = 9 [(go.field) = {tags:'gorm:"-" comment:"地区"'}];
  uint64 areaId = 10 [(go.field) = {tags:'gorm:"size:10;default:0" comment:"地区"'}];
  uint32 areaVisibility = 11 [(go.field) = {tags:'gorm:"type:int2;default:2" comment:"地区可见性，1-可见"'}];
  string location = 12 [(go.field) = {tags:'gorm:"size:20" comment:"位置"'}];
  repeated common.TinyTag tags = 13 [(go.field) = {tags:'gorm:"-" comment:"标签"'}];
  user.UserBase user = 14 [(go.field) = {tags:'gorm:"-" comment:"用户"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" comment:"用户id"'}];
  repeated user.UserBase approveUsers = 15 [(go.field) = {tags:'gorm:"-" comment:"点赞用户"'}];
  repeated user.UserBase collectUsers = 16 [(go.field) = {tags:'gorm:"-" comment:"收藏用户"'}];
  repeated user.UserBase likeUsers = 25 [(go.field) = {tags:'gorm:"-" comment:"喜欢用户"'}];
  repeated Comment comments = 18 [(go.field) = {tags:'gorm:"-" comment:"评论"'}];
  uint32 sequence = 19 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint32 anonymous = 20 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"是否匿名,0-是,1否"'}];
  ViewPermission permission = 21 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"查看权限"'}];
  uint32 status = 24 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  model.ModelTime  modelTime = 22 [(go.field) = {tags:'json:"modelTime,inline" gorm:"embedded"'}];
}

message DiaryBook{
  uint64 id = 1 [(go.field) = {tags:'gorm:"primaryKey"'}];
  string title = 2 [(go.field) = {tags:'gorm:"size:50;not null" comment:"标题"'}];
  string description = 3 [(go.field) = {tags:'gorm:"type:text;not null" comment:"描述"'}];
  string cover = 4 [(go.field) = {tags:'gorm:"size:255;not null" comment:"封面"'}];
  uint32 sequence = 12 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"同级别的分类可根据sequence的值来排序，置顶"'}];
  uint32 anonymous = 15 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"是否匿名,0-是,1否"'}];
  ViewPermission permission = 13 [(go.field) = {tags:'gorm:"type:int2;default:0" comment:"查看权限"'}];
  uint64 userId = 17 [(go.field) = {tags:'gorm:"size:20;not null;index" comment:"用户id"'}];
  uint32 status = 18 [(go.field) = {tags:'gorm:"type:int2;default:0"'}, (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = {
    read_only:true
  }];
  model.ModelTime  modelTime = 22 [(go.field) = {tags:'json:"modelTime,inline" gorm:"embedded"'}];
}