syntax = "proto3";
package errorcode;
import "utils/enum/enum.proto";
import "utils/patch/go.proto";

option java_package = "xyz.hoper.protobuf.errorcode";
option go_package = "github.com/actliboy/hoper/server/go/lib/protobuf/errorcode";
option (enum.enum_prefix_all) = false;
option (go.file) = {no_enum_prefix:true};

enum ErrCode {
  option (go.enum) = {stringer_name: 'OrigString'};
  option (enum.enum_jsonmarshal) = false;

  SUCCESS = 0 [(enum.enumvalue_cn) = "成功"];
  Canceled = 1 [(enum.enumvalue_cn) = "操作取消"];
  Unknown = 2 [(enum.enumvalue_cn) = "未知错误"];
  InvalidArgument = 3 [(enum.enumvalue_cn) = "无效的参数"];
  DeadlineExceeded = 4 [(enum.enumvalue_cn) = "响应超时"];
  NotFound = 5 [(enum.enumvalue_cn) = "未发现"];
  AlreadyExists = 6 [(enum.enumvalue_cn) = "已经存在"];
  PermissionDenied = 7 [(enum.enumvalue_cn) = "操作无权限"];
  ResourceExhausted = 8 [(enum.enumvalue_cn) = "资源不足"];
  FailedPrecondition = 9 [(enum.enumvalue_cn) = "操作被拒绝"];
  Aborted = 10 [(enum.enumvalue_cn) = "操作终止"];
  OutOfRange = 11 [(enum.enumvalue_cn) = "超出范围"];
  Unimplemented = 12 [(enum.enumvalue_cn) = "未实现"];
  Internal = 13 [(enum.enumvalue_cn) = "内部错误"];
  Unavailable = 14 [(enum.enumvalue_cn) = "服务不可用"];
  DataLoss = 15 [(enum.enumvalue_cn) = "数据丢失"];
  Unauthenticated = 16 [(enum.enumvalue_cn) = "身份未验证"];


  SysError = 10000 [(enum.enumvalue_cn) = "系统错误"];


  DBError = 21000 [(enum.enumvalue_cn) = "数据库错误"];
  RowExists = 21001 [(enum.enumvalue_cn) = "记录已存在"];
  RedisErr = 22000 [(enum.enumvalue_cn) = "Redis错误"];

  IOError = 30000 [(enum.enumvalue_cn) = "io错误"];
  UploadFail = 30001 [(enum.enumvalue_cn) = "上传失败"];
  UploadCheckFail = 30002 [(enum.enumvalue_cn) = "检查文件失败"];
  UploadCheckFormat = 30003 [(enum.enumvalue_cn) = "文件格式或大小有问题"];

  TimeTooMuch = 30004 [(enum.enumvalue_cn) = "尝试次数过多"];
  ParamInvalid = 30005 [(enum.enumvalue_cn) = "参数错误"];
}